@@ -1,3 +1,9 @@
+2009-03-30  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/38781
+	* config/i386/i386.c (classify_argument): Check total size of
+	structure.
+
 2010-02-08  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/42890
